--- a/userService/.gitignore
+++ b/userService/.gitignore
@@ -32,4 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-userService/src/main/resources/application.properties
+# Ignore application.properties in userService
+/userService/src/main/resources/application.properties
