--- a/TransactionService/pom.xml
+++ b/TransactionService/pom.xml
@@ -88,7 +88,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
