--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -1,12 +1,21 @@
-spring.application.name=transaction-service
-server.port=8092
-
-spring.datasource.url=jdbc:mysql://localhost:3306/transaction_service_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=MySQL-1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Hibernate settings
+spring.application.name=TransactionService
+server.port =8092
+spring.datasource.url=jdbc:postgresql://localhost:5432/TransactionServices
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-postgresql=true
+spring.jpa.properties.hibernate.format_postgresql=true
+spring.jpa.open-in-view=false
+hibernate.transaction.jta.platform=org.hibernate.service.jta.JtaPlatform
+spring.datasource.hikari.maximum-pool-size=10
+
+
+# Kafka
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.topic.order=log-topic
+
