--- a/Logging/pom.xml
+++ b/Logging/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
