MySQL resources files & fixing cron expression back to everyhour

--- a/BFFService/src/main/resources/application.properties
+++ b/BFFService/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.application.name=BFFService
-server.port =8093
-# Kafka
+spring.application.name=BFF-service
+server.port=8093
 
-
-spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
-spring.kafka.topic.order=log-topic
-
+# Kafka Consumer
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=logging-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+logging.kafka.topic=log-topic
