--- a/accountService/src/main/resources/application.properties
+++ b/accountService/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-spring.application.name=accountService
-server.port =8091
-spring.datasource.url=jdbc:postgresql://localhost:5432/Account
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.application.name=account-service
+server.port=8091
+
+spring.datasource.url=jdbc:mysql://localhost:3306/account_service_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=MySQL-1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-postgresql=true
-spring.jpa.properties.hibernate.format_postgresql=true
-spring.jpa.open-in-view=false
-hibernate.transaction.jta.platform=org.hibernate.service.jta.JtaPlatform
-spring.datasource.hikari.maximum-pool-size=10
-
-# Kafka
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
-spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
-spring.kafka.topic.order=log-topic
-
+# Kafka Consumer
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=logging-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+logging.kafka.topic=log-topic
